Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.14.2
-
Fix Version/s: Qt Creator 4.15.0-rc1
-
Component/s: Project & Build Management
-
Labels:None
-
Platform/s:
-
Commits:65db684c7d7ba1e2e706f1cb247affd93d8edc81
Description
(Not sure about the component)
Since 4.14 macros such as %
{CurrentRun:Executable:FilePath}do not seem to be available any more in the "external tools". They are not present in the list that pops up in the external tools dialog, and do not expand correctly (they're not replaced). They still work as intended in the "ordinary" run settings. Was this change deliberate? Is there a documented replacement?
(Might be a side effect of https://codereview.qt-project.org/c/qt-creator/qt-creator/+/315753 )